version 0.60.3
30/05/2018
	- improved user authentication by using authentication filter for authorization code request (margaretha)
	- limited client authentication to client id checking in authorization code request (margaretha)
	- added user_id in the oauth2_access_token database table (margaretha)
	- implemented OAuth2Authentication provider for token context management (margaretha)
	- added parameter checking for authorization DAO (margaretha)
	- added controller tests using OAuth2 access token (margaretha)
	
version 0.60.2
03/05/2018
	- implemented OAuth2 client registration (margaretha)
	- implemented OAuth2 client authentication (margaretha)
	- changed virtual corpus search to retrieval (margaretha)
	- implemented public client deregistration task (margaretha)
	- added client registration and deregistration tests (margaretha)
	- implemented confidential client deregistration task (margaretha)
	- fixed storing client secret (margaretha)
	- implemented OAuth2 response handler (margaretha)
	- implemented OAuth2 request access token with client credentials grant (margaretha)
	- implemented OAuth2 request access token with resource owner password grant (margaretha)
	- implemented OAuth2 authorization code request (margaretha)
	- added OAuth2 error codes (margaretha)
	- added OAuth2 authorization, scope and access token tables for SQLite (margaretha)
	- implemented OAuth2 authorization, scope and access token DAO (margaretha)
	- implemented OAuth2 request access token with authorization code grant (margaretha)
	- added setting default scopes in the config file (margaretha)
	- fixed loading spring config multiple times in the test suite (margaretha)
	- added SQLite created_date trigger for access token (margaretha)  
	- added a join table for access token scopes (margaretha)
	- added access scopes handling (margaretha)
	- added tests about request token with authorization code (margaretha)
	
version 0.60.1
28/03/2018
	- added admin-related SQL codes (margaretha)