@@ -241,13 +241,6 @@
 			<version>0.4</version>
 		</dependency>
 		
-		<!-- EM: nimbus version is very old -->
-		<dependency>
-			<groupId>com.nimbusds</groupId>
-			<artifactId>nimbus-jose-jwt</artifactId>
-			<version>2.10.1</version>
-		</dependency>
-
 		<dependency>
 			<groupId>de.ids_mannheim.korap</groupId>
 			<artifactId>Krill</artifactId>
